# PixelForge

./: .gitignore  LICENSE  README.md
engine/: CMakeLists.txt  README.md  commit.msg
engine/.cache/clangd/index/: block.cpp.427D249CFA505082.idx  block.hpp.A622A040EFF7E64D.idx  file.hpp.8C3720AB2889005F.idx  global.hpp.0B9DE425741E6DE5.idx  lexer.hpp.E48998E4034DE844.idx  main.cpp.C18677D1E1792337.idx  source_stream.hpp.7455ACCD3519B3BF.idx  token.hpp.3B08EEC591F097FF.idx  type.hpp.04F6BBBDD853148C.idx
engine/scripts/: build.zsh  flameit.zsh  run.zsh
engine/src/: global.h  global.hpp  main.cpp
engine/src/core/: bump_arena.hpp  byte_io.cpp  byte_io.hpp  cursor_stack.hpp  free_list_id.hpp  incremental_id.hpp  interner.hpp
engine/src/core/arena/: bump_arena.hpp
engine/src/core/c/: macros.h  types.h
engine/src/core/cplusplus/: macros.hpp  types.hpp
engine/src/core/id/: incremental.hpp
engine/src/core/io/: byte.cpp  byte.hpp  file.cpp  file.hpp  log.hpp
engine/src/core/stack/: iterable.hpp
engine/src/forgescript/: fscript_ast.cpp  fscript_ast.hpp  fscript_code_generator.cpp  fscript_code_generator.hpp  fscript_compiler.cpp  fscript_compiler.hpp  fscript_const_pool.cpp  fscript_const_pool.hpp  fscript_diagnostic.cpp  fscript_diagnostic.hpp  fscript_lexer.cpp  fscript_lexer.hpp  fscript_packer.cpp  fscript_packer.hpp  fscript_parser.cpp  fscript_parser.hpp  fscript_pattern.hpp  fscript_preprocessor.cpp  fscript_preprocessor.hpp  fscript_specs.h  fscript_symbol_table.cpp  fscript_symbol_table.hpp  fscript_token.cpp  fscript_token.hpp
engine/src/forgescript/vm/: fscript_instruction.c  fscript_instruction.h  fscript_interpreter.c  fscript_interpreter.h  fscript_mem.c  fscript_mem.h  fscript_package.c  fscript_package.h  fscript_unpacker.c  fscript_unpacker.h
engine/src/instruction/: block.cpp  block.hpp  group.cpp  group.hpp  type.hpp
engine/src/io/: byte.cpp  byte.hpp  file.cpp  file.hpp  log.hpp
engine/src/package/: package.h
engine/src/script/: ast.cpp  ast.hpp  bytecode.cpp  bytecode.hpp  code_generator.cpp  code_generator.hpp  command_props.cpp  command_props.hpp  compiler.cpp  compiler.hpp  const_pool.cpp  const_pool.hpp  diagnostic.cpp  diagnostic.hpp  lexer.cpp  lexer.hpp  location.hpp  packer.cpp  packer.hpp  parse_tree.cpp  parse_tree.hpp  parser.cpp  parser.hpp  pattern.hpp  preprocessor.cpp  preprocessor.hpp  source_stream.hpp  specs.h  symbol_table.cpp  symbol_table.hpp  token.cpp  token.hpp  vm_def.c  vm_def.h
engine/src/sprite/: sprite.c  sprite.h  sprite_instance.h  sprite_looks.c  sprite_looks.h
engine/src/util/: bump_arena.hpp
engine/test/: bump_arena.test.cpp  test  unique_string.test.cpp  vec.test.c
(+49 files in other folders)
